# spatialtime

./: Cargo.toml  LICENSE  README.md
assets/: timezones_ned.fgb.zst
build-assets/: Cargo.toml
build-assets/src/: main.rs
spatialtime/: Cargo.toml  build.rs
spatialtime-build/: Cargo.toml
spatialtime-build/src/: main.rs
spatialtime/src/: lib.rs  ned.rs  osm.rs  shared.rs
