[package]
name = "build-assets"
version = "0.2.0"
edition = "2021"

[features]
default = ["ned", "osm"]
ned = []
osm = []

[dependencies]
anyhow = "1.0.86"
flatgeobuf = "4.2.1"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = "0.13.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = "1.0.205"
serde_json = "1.0.122"
zip = "2.1.6"
zstd = "0.13.2"