[package]
name = "spatialtime"
version = "0.2.0"
edition = "2021"
authors = ["Brian Moran <dev@moran.network>"]
license = "MIT"
description = "A simple library to lookup longitude + latitude pairs, using flatgeobufs."
readme = "../README.md"
homepage = "https://github.com/moranbw/spatialtime"
repository = "https://github.com/moranbw/spatialtime"
keywords = ["time", "timezone", "geospatial", "coordinates", "gps"]
categories = ["date-and-time"]

[package.metadata.docs.rs]
features = ["ned", "osm"]

[lib]
name = "spatialtime"
path = "src/lib.rs"

[features]
osm = []
ned = []
rebuild-assets = []

[dependencies]
flatgeobuf = "4.2.1"
geo = "0.28.0"
geozero = "0.13.0"
thiserror = "1.0.63"
zstd = "0.13.2"

[build-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["blocking"] }
